--- a/server/styles/main.css
+++ b/server/styles/main.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap');
 
 :root {
   --text-sans-worksans: 'Work Sans',
@@ -57,18 +57,21 @@ code {
 }
 
 h1 {
-  margin-block-start: 0.3em; /* 0.67em */
-  margin-block-end: 0.3em; /* 0.67em */
+  @apply font-bold text-3xl;
 }
 
 h2 {
-  margin-block-start: 0.3em; /* 0.83em */
-  margin-block-end: 0.3em; /* 0.83em */
+  @apply font-bold text-2xl;
 }
 
 h3 {
-  margin-block-start: 0.3em; /* 1em */
-  margin-block-end: 0.3em; /* 1em */
+  @apply font-bold text-xl;
+}
+
+h4,
+h5,
+h6 {
+  @apply font-bold;
 }
 
 p,
